--- a/Editor/Unity.AddressablesBuildLayoutExplorer.Editor.asmdef
+++ b/Editor/Unity.AddressablesBuildLayoutExplorer.Editor.asmdef
@@ -1,6 +1,9 @@
 {
     "name": "Unity.BuildLayoutExplorer.Editor",
-    "references": [],
+    "references": [
+        "GUID:9e24947de15b9834991c9d8411ea37cf",
+        "GUID:69448af7b92c7f342b298e06a37122aa"
+    ],
     "includePlatforms": [
         "Editor"
     ],
@@ -10,6 +13,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.addressables",
+            "expression": "0.0.0",
+            "define": "ADDRESSABLES_PRESENT"
+        }
+    ],
     "noEngineReferences": false
 }
