--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "com.oddworm.addressablesbuildlayoutexplorer",
-  "version": "1.0.0",
+  "version": "1.0.0-pre.1",
   "displayName": "Addressables BuildLayout Explorer",
-  "description": "Addressables BuildLayout Explorer allows you to inspect the 'buildlayout.txt' file that Addressables generated when building content.",
+  "description": "Addressables BuildLayout Explorer allows you to inspect the 'buildlayout.txt' file that Addressables generates when building content.\n\nYou can open the Addressables BuildLayout Explorer window from the main-menu under 'Window > Asset Management > Addressables > BuildLayout Explorer'.",
   "unity": "2019.3",
   "documentationUrl": "https://github.com/pschraut/UnityAddressablesBuildLayoutExplorer",
   "dependencies": {
