first implementation of Addressables 1.20.0 buildlayout json support

--- a/Editor/Unity.AddressablesBuildLayoutExplorer.Editor.asmdef
+++ b/Editor/Unity.AddressablesBuildLayoutExplorer.Editor.asmdef
@@ -18,6 +18,11 @@
             "name": "com.unity.addressables",
             "expression": "0.0.0",
             "define": "ADDRESSABLES_PRESENT"
+        },
+        {
+            "name": "com.unity.addressables",
+            "expression": "1.20.0",
+            "define": "ADDRESSABLES_JSON_SUPPORT"
         }
     ],
     "noEngineReferences": false
